# BabyBoy

./: .gitignore  BabyBoy.cpp  CMakeLists.txt  CPU.cpp  CPU.h  GBGCommentedBoot.asm  RAM.cpp  RAM.h  README.md  Rom.cpp  Rom.h  SDLWindow.cpp  SDLWindow.h  SoC.cpp  SoC.h  license.md  vram.dump
BabyTests/: BabyTests.vcxproj  BabyTests.vcxproj.filters  CPULoadTests.cpp  CPULoad_b_x.cpp  CPULoad_c_x.cpp  CPULoad_d_x.cpp  CPULoad_e_x.cpp  CPULoad_l_x.cpp
res/: convertOpcodes.py
src/: BabyBoy.cpp  CPP.cpp  CPU.cpp  CPU.h  Config.cpp  Config.h  Debug.cpp  Debug.h  Debug_Instruction.h  Input.cpp  Input.h  Opcode.h  OpcodesArray.h  RAM.cpp  RAM.h  Rom.cpp  Rom.h  SDLWindow.cpp  SDLWindow.h  SoC.cpp  SoC.h  State.cpp  State.h  Window.h  WindowManager.cpp  WindowManager.h  cb_prefixed.h  unprefixed.h
src/SDL/: SDLWindow.cpp  SDLWindow.h
src/windows/: DebugWindow.cpp  DebugWindow.h  MainWindowDesktop.cpp  MainWindowDesktop.h  VRAMWindow.cpp  VRAMWindow.h
tests/: CMakeLists.txt  CPULoad_d_x.cpp  CPULoad_h_x.cpp  CPULoad_hl_x.cpp  test_load_instructions.h  tests.cpp
